app/styles/light.scss
/* ... */
.sca-light .pink1 {
    color: #e91e63;
    background-color: transparent;
}
.sca-light .green.darken-1 {
    color: #43A047;
    background-color: transparent;
}
.sca-light .editpanel {
    background-color: #eee
}
.sca-light .green {
    color: #4CAF50;
    background-color: transparent;
}
.sca-light .deep-purple {
    color: #673ab7;
    background-color: transparent;
}
.sca-light .blue.darken-1 {
    color: #009cd7;
    background-color: transparent;
}
.sca-light .blue.darken-1 {
    color: #009cd7;
    background-color: transparent;
}
.sca-light .navbar-default .btn-link {
    color: #474747;
}
.sca-light .navbar-default .btn-link:hover {
    background-color: #eee;
}
.sca-light .model-header h4 {
    color: #3F3F3F
}
.sca-light .editing-form .concept-headers select {
    color: #3F3F3F !important;
}
.sca-light .task-details .green {
    background-color: transparent;
}

.sca-light .classification-btn .btn-default:hover {
    color: #474747;
    background-color: transparent;
    border: 1px #e6e6e6 solid!important;
}
.sca-light .pink.darken-2 {
    color: #c2185b;
    background-color: transparent;
}
.sca-light .task-details button {
    background-color: #fff!important;
}
.sca-light .task-details button:hover {
    background-color: #f8f8f8!important;
}
.sca-light .add-buttons {
    background-color: transparent !important;
    padding: 1px 3px !important;
    color: #474747 !important;
}
.sca-light .toggle-buttons {
    background-color: transparent !important;
}
/*widget buttons */

.sca-light .widget-toolbar:hover {
    background-color: #fff!important;
    color: #474747!important
}
.sca-light .classification-btn .btn-default:hover,
.sca-light .classification-btn .btn-default span:hover {
    color: #474747!important
}
/*edit buttons */

.sca-light .small-buttons {
    padding: 0px 1% !important;
    font-size: 16px !important;
}
.sca-light .small-buttons:hover {
    color: #474747 !important;
    background-color: transparent !important;
}
.sca-light .morebuttons {
    color: #00a6e5;
    background: transparent
}


.sca-light .project-icon.deep-purple.lighten-1{    background-color: #7e57c2;
    color: #fff;}
	
	.sca-light .project-icon.green {
    background-color: #4CAF50;
    color: #fff;
}
	
	.sca-light .project-icon.red {
    background-color: #e92848;
    color: #fff;
}
	
	.sca-light .project-icon.blue {
    background-color: #00a6e5;
    color: #fff;
}

.sca-light a.tooltips-left span, .sca-light button.tooltips-left span, .sca-light button[disabled].tooltips-left span{background-color:#e6e6e6;color:#474747}

.sca-light .loading-merges.green{background-color:#4CAF50}
.sca-light .loading-merges.blue.darken-1{background-color:#009cd7}
.sca-light .loading-merges.red{background-color:#d01c3e}
.sca-light .classification-header .green.darken-4 {
    background-color: #1B5E20;
    color: #fff;
}

.sca-light .classification-header .green {
    background-color: #4CAF50;
    color: #fff;
}
/* scolll bars */

.sca-light .sca-container::-webkit-scrollbar, .ta-scroll-window.form-control::-webkit-scrollbar{
  width: 7px;
  height: 7px;
  background-color:#fff
}
.sca-light .sca-container::-webkit-scrollbar-button, .ta-scroll-window.form-control::-webkit-scrollbar-button {
  width: 7px;
  height: 7px;
}
.sca-light .sca-container::-webkit-scrollbar-thumb, .ta-scroll-window.form-control::-webkit-scrollbar-thumb {
  background: #e1e1e1;
  border: 0px none #ffffff;
  border-radius: 62px;
}
.sca-light .sca-container::-webkit-scrollbar-thumb:hover, .ta-scroll-window.form-control::-webkit-scrollbar-thumb:hover {
  background: #57a5cc;
}
.sca-light .sca-container::-webkit-scrollbar-thumb:active, .ta-scroll-window.form-control::-webkit-scrollbar-thumb:active {
  background: #e7e7e7;
}
.sca-light .sca-container::-webkit-scrollbar-track, .ta-scroll-window.form-control::-webkit-scrollbar-track {
  background: #edecee;
  border: 0px none #ffffff;
  border-radius: 50px;
}
.sca-light .sca-container::-webkit-scrollbar-track:hover, .ta-scroll-window.form-control::-webkit-scrollbar-track:hover {
  background: #e5e6e8;
}
.sca-light .sca-container::-webkit-scrollbar-track:active, .ta-scroll-window.form-control::-webkit-scrollbar-track:active {
  background: #d8d7d9;
}
.sca-light .sca-container::-webkit-scrollbar-corner, .ta-scroll-window.form-control::-webkit-scrollbar-corner {
  background: transparent;
} 
.sca-light .validation.red {
       background-color: #FFCDD2;
    color: #474747;
}
.sca-light .validation.orange {
    background-color: #ffecb3;
    color: #474747;
}


.sca-light .btn-round.purple.lighten-1 {

   color: #ba68c8;
    background-color: transparent;
}
.sca-light .saved.green  {   background-color: #C8E6C9!important;}
.sca-light .saved.blue  {     background-color: #e1f5fe!important;}
.sca-light .saved.orange  {      background-color: #ffecb3!important;}
.sca-light .saved.red  {      background-color: #FFCDD2!important;}
.sca-light .saved, .sca-light .fa-close {color:#474747!important;}
.sca-light .btn-round{background-color: transparent}
.sca-light .green.btn-round, {background-color: transparent!important; color:#4CAF50}
.sca-light .green.btn-round:hover {color: #2d6830!important; background-color:transparent!important}
.sca-light .blue.btn-round, {background-color: transparent!important; color:#42A5F5}
.sca-light .blue.btn-round:hover {color: #2a6a9d!important; background-color:transparent!important}

.sca-light .blue.green.btn-round, {background-color: transparent!important; color:#42A5F5}
.sca-light .blue.green.btn-round:hover {color: #2a6a9d!important; background-color:transparent!important}
.sca-light .red.btn-round {background-color: transparent; color:#e92848!important}
.sca-light .red.btn-round:hover {color: #8c182b!important; background-color: transparent; }
.sca-light .amber.btn-round {background-color: transparent; color:#ffca28!important}
.sca-light .amber.btn-round:hover {color: #d87900; background-color:transparent}
/* ... */

